# gps-time-sync-vk172

./: .gitignore  KNOWN_ISSUES_AND_TODO.md  README.md  README_CHAT.md  README_VENV.md  pyproject.toml
.github/workflows/: ci.yml
docs/: contributor-setup.md  development-notes.md  systemd-deployment.md
scripts/: gps_sync.sh
src/gps_time_syc_vk172/: __init__.py  __main__.py
src/gps_time_sync_vk172/: __init__.py  __main__.py  gps_time_sync.py
systemd/: gps-time-sync.env.example  gps-time-sync.service  gps-time-sync.timer
tests/: test_gps_sync_script.py  test_gps_time_sync.py  test_main.py  test_systemd_deployment.py
