[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gps-time-syc-vk172"
version = "0.1.0"
description = "GPS time synchronization utilities for the VK172 USB receiver"
authors = [{name = "Rob"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pyserial>=3.5",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]

[project.scripts]
gps-time-sync = "gps_time_syc_vk172.gps_time_sync:cli"

[project.urls]
Homepage = "https://example.com/gps-time-syc-vk172"
Repository = "https://example.com/gps-time-syc-vk172.git"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/gps_time_syc_vk172"]
