[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gps-time-sync-vk172"
version = "0.1.0"
description = "GPS time synchronization utilities for the VK172 USB receiver"
authors = [{name = "Rob"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Unix/Linux",
]
dependencies = [
  "pyserial>=3.5",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]

[project.scripts]
gps-time-sync = "gps_time_sync_vk172.gps_time_sync:cli"

[project.urls]
Homepage = "https://github.com/rhaag71/gps-time-sync-vk172"
Repository = "https://github.com/rhaag71/gps-time-sync-vk172"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/gps_time_sync_vk172"]
